--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ discord = "^1.7.3"
 pandas = "^1.4.2"
 poetry = "^1.1.13"
 table2ascii = "^0.2.0"
+schedule = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
