--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  bot:
+  birthday-bot:
     image: lemmurb/birthday-gratulation-bot:latest
     build: .
     environment:
