--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.4.0
 chardet==4.0.0
-discord==1.7.3
-discord.py==1.7.3
+disnake==2.5.1
 idna==3.3
 multidict==6.0.2
 numpy==1.23.1
