--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ venv.bak/
 __pycache__/
 *.py[cod]
 
-### data ###
+# Data
 /data/*
-# Behalte den backup-Ordner, indem eine Dummy-Datei enthalten bleibt
+# Keep data folder by keeping a dummy file
 !/data/.gitkeepfolder
