--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,19 @@
 [tool.poetry]
-name = "repl_python3_BirthdayGratulationBot"
+name = "discordpy-bot-template-with-commands-extension"
 version = "0.1.0"
 description = ""
-authors = ["D-Bald <<>>"]
+authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-python-dotenv = "^0.20.0"
-discord = "^1.7.3"
-pandas = "^1.4.2"
-poetry = "^1.1.13"
-table2ascii = "^0.2.0"
 schedule = "^1.1.0"
+pandas = "^1.4.3"
+python-dotenv = "^0.20.0"
+table2ascii = "^0.2.0"
+disnake = "^2.5.2"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
